--- a/src/presentation/pages/login/styles.module.scss
+++ b/src/presentation/pages/login/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/colors.module";
+@import "/src/presentation/styles/colors.module";
 
 * {
   font-family: Roboto, sans-serif;
@@ -42,23 +42,6 @@ button {
   flex-direction: column;
   height: 100vh;
   justify-content: space-between;
-
-  .header {
-    display: flex;
-    flex-direction: column;
-    border-top: 2.5rem solid $primary-dark;
-    background-color: $primary;
-    align-items: center;
-
-    img {
-      margin-top: 2.5rem;
-    }
-
-    h1 {
-      color: $primary-contrast-text;
-      margin: 1rem 0 2.5rem;
-    }
-  }
 
   .form {
     display: flex;
@@ -126,10 +109,5 @@ button {
         color: $primary-light;
       }
     }
-  }
-
-  .footer {
-    background-color: $primary;
-    height: 3rem;
   }
 }
