fix: changing className that were throwing warn

--- a/src/presentation/pages/login/styles.module.scss
+++ b/src/presentation/pages/login/styles.module.scss
@@ -28,7 +28,7 @@
       margin-top: 0.5rem;
     }
 
-    .link {
+    .new-account {
       text-align: center;
       color: $primary;
       text-transform: capitalize;
