--- a/src/presentation/components/input/styles.module.scss
+++ b/src/presentation/components/input/styles.module.scss
@@ -1,3 +1,5 @@
+@import "/src/presentation/styles/colors.module";
+
 .input-wrapper {
   position: relative;
   display: flex;
@@ -6,6 +8,16 @@
 
   input {
     flex-grow: 1;
+  }
+
+  label {
+    position: absolute;
+    font-size: 0.75rem;
+    background: $white;
+    color: $disabled-background-contrast-text;
+    padding: 2px 4px;
+    top: -8px;
+    left: 6px;
   }
 
   .status {
