--- a/src/presentation/styles/global.module.scss
+++ b/src/presentation/styles/global.module.scss
@@ -17,7 +17,7 @@ input[type="email"] {
   border: 1px solid $primary-light;
   line-height: 2.5rem;
   border-radius: 0.25rem;
-  padding: 0 40px 0 8px;
+  padding: 4px 40px 4px 8px;
 
   &:focus {
     outline-color: $primary-light;
